# Forkit

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/forkpoint_server/: main.py  ws.py
backend/forkpoint_server/api/: analysis.py  diff.py  ingest.py  runs.py  snapshots.py
backend/forkpoint_server/db/: database.py  models.py
backend/forkpoint_server/services/: causal.py  diff.py  drift.py  testgen.py
examples/: langgraph_example.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  runs.ts  snapshots.ts  ws.ts
frontend/src/components/diff/: RunDiff.tsx
frontend/src/components/graph/: AgentNode.tsx  ExecutionGraph.tsx
frontend/src/components/inspector/: MessageViewer.tsx  SnapshotInspector.tsx  StateEditor.tsx  ToolCallViewer.tsx
frontend/src/components/shared/: JsonViewer.tsx  RunList.tsx
frontend/src/hooks/: useLiveEvents.ts  useRun.ts
frontend/src/stores/: graphStore.ts  liveStore.ts  runStore.ts
frontend/src/types/: index.ts
sdk/: pyproject.toml
sdk/forkpoint/: __init__.py
sdk/forkpoint/core/: replay.py  tracer.py
sdk/forkpoint/integrations/: langgraph.py  raw.py
sdk/forkpoint/models/: events.py
sdk/forkpoint/transports/: base.py  http.py  local.py
sdk/tests/: test_replay.py  test_tracer.py
