[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forkpoint-server"
version = "0.1.0"
description = "Forkpoint backend API server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.19",
    "httpx>=0.25",
    "python-multipart>=0.0.9",
    "sentence-transformers>=2.3",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
