[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forkpoint"
version = "0.1.0"
description = "Runtime debugger for multi-agent AI systems — treat agent runs like git commits"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "aiofiles>=23.0",
    "aiosqlite>=0.19",
    "tiktoken>=0.5",
    "anyio>=4.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.1"]
crewai = ["crewai>=0.1"]
autogen = ["pyautogen>=0.2"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.12",
    "ruff>=0.1",
    "mypy>=1.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
